@@ -1,0 +1,35 @@
+/*
+   Project: $PROJECTNAME$
+
+   Copyright (C) $YEAR$ Free Software Foundation
+
+   Author: $FULLUSERNAME$
+
+   Created: $DATE$ by $USERNAME$
+
+   This application is free software; you can redistribute it and/or
+   modify it under the terms of the GNU General Public
+   License as published by the Free Software Foundation; either
+   version 2 of the License, or (at your option) any later version.
+
+   This application is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+   Library General Public License for more details.
+
+   You should have received a copy of the GNU General Public
+   License along with this library; if not, write to the Free
+   Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111 USA.
+*/
+
+#import "$FILENAME$.h"
+
+// This is an Obj-C++ file... add what you need to mighty Objective-C
+
+// if you need, add your C++ classes
+
+@implementation $FILENAME$
+
+@end
+
+// add your C++ methods here
